--- a/app/styles/components/_mock_build_page.sass
+++ b/app/styles/components/_mock_build_page.sass
@@ -80,8 +80,12 @@
       position: relative
       height: 70px
 
-      &.hint--always:before,
-      &.hint--always:after,
+      &.hint--always:before
         top: 15px
+        left: 50%
+
+      &.hint--always:after
+        top: 15px
+        left: 35%
 
 
